<resources>
    <string name="extension_name">Jsoup Dash</string>
    <string name="parameters">Settings</string>
    <string name="application_name">Dashclock Jsoup Dash 2 extension</string>
    <string name="preferences_title">Extension settings</string>
    <string name="extension_info">Jsoup HTML/XML data extractor. Displays up to 4 items</string>
    <string name="rsstitle">Title on dash</string>
    <string name="rssurl">URL to fetch</string>
    <string name="pattern">Jsoup pattern</string>    
    <string name="scron_title">ScreenOn refresh</string>    
    <string name="scron_info">Update on screen wakeup</string>    
    <string name="showon_title">Persistent</string>
    <string name="showon_info">Always show</string>
    <string name="pars_title">Use XML parser</string>
    <string name="pars_info">Default unchecked (HTML)</string>
    <string name="toms_title">Connection timeout ms</string>
    <string name="toms_info">Default 3000</string>    
    <string name="rvr_title">Reversed order</string>
    <string name="rvr_info">Default unchecked</string>    
    <string name="nums_title">Show (All#)Title</string>
    <string name="nums_info">Shows total number of detected items</string>
    <string name="ss_title">Select #item to show</string>
    <string name="ss_info">Default 0,1,2,3 if reversed starts from the last</string>  
</resources>